--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="https://o.remove.bg/downloads/d82d91e8-0c06-41e5-b91c-25bacd9e1125/376e14c6-f99e-4695-8479-502f1caae021-removebg-preview.png" />
+    <link rel="icon" type="image" href="https://file1.removal.ai/preview/931061f7-1b79-47f8-ae57-27023e24c848_a386be8d-8034-434e-afe4-628396e5b9b1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TAM VX</title>
   </head>
