--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image" href="https://file1.removal.ai/preview/931061f7-1b79-47f8-ae57-27023e24c848_a386be8d-8034-434e-afe4-628396e5b9b1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://use.typekit.net/uha1xkx.css">
     <title>TAM VX</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    
   </body>
 </html>
